redesigned the home appearance
redesigned the home appearance by introducing a transparent navigation bar and form(log in)

--- a/yakuzahomepage.html
+++ b/yakuzahomepage.html
@@ -20,9 +20,9 @@
 
 
      
-          <LI><a href="yakuzaAbout.html" style="color: white;" >ABOUT</a></LI>                    
-                             <li><a href="yakuzagoal.html" style="color: white;"> GOAL</a></li>       
-                                 <li> <a href="yakuzainspiration.html" style="color: white">INSPIRATION</a></li>
+          <LI><a href="yakuzaAbout.html"  >ABOUT</a></LI>                    
+                             <li><a href="yakuzagoal.html"> GOAL</a></li>       
+                                 <li> <a href="yakuzainspiration.html">INSPIRATION</a></li>
 
 
 
