Creativity and design
Made creative induced  changes and layouts improvements

--- a/yakuzaAbout.html
+++ b/yakuzaAbout.html
@@ -6,17 +6,18 @@
           </title>
 </head>
 <body id="aboutyakuza" >
-         <div id="about">
+          <div class="wrapperA">
+         <div class="about">
 
-          <h1 id="A"> ABOUT</h2>          
+          <h1>ABOUT</h2>          
 
-                    <p id="about">
+                    <p>
                               Yakuza offers a squeaky clean-gym experience at an exceptional affordable rates.No matter what you are looking for in a gym, at yakuza we've  completely got you covered by our various membership offers that are exclusively and uniquely tailored for you based on your genetical body type and  body goals.All Yakuza memebers enjoy unlimited acces to their home clubs and support from our friendly and knowledgeable staff  anytime you need them.There are also additional benefits such as the ability to bring a guest into any of our gym branches countrywide at no additional costs.
 
                                                  </p>
 
          </div> 
-
+</div>
 
 <div class="back">
           <a href="yakuzahomepage.html" style="color:black;" >back</a>
