--- a/yakuzagoal.html
+++ b/yakuzagoal.html
@@ -3,17 +3,18 @@
           <title>GOALS</title>
           <link rel="stylesheet" href="yakuzaPowergym.css">
 </head>
-<body id="goalyakuza">
-          <div>
+<body class="body">
+          <div class="wrapperG">
+                    <div class="GOALS">
 
-                    <h1 ID="G">GOALS</h5>
-                              <p id="goal">
+                    <h1>GOALS</h1>
+                              <p>
                                         It's our goal to provide a clean,safe and welcoming environment for anyone who walks through our doors and to  also facillitate the provision of equipments,fitness-related amenities and quality proffesional support  to our esteemed customers once they are in the PoWerHouSe.
 
                                         
                               </p>
 
-
+</div>
 
 
           </div>
