--- a/yakuzainspiration.html
+++ b/yakuzainspiration.html
@@ -5,12 +5,12 @@
 </head>
 <body id="inspirationyakuza">
           
-<div>
+<div class="wrapperI">
 
+<div class="inspiration">
+          <h1>INSPIRATION</h1>
 
-          <h1 id="I">INSPIRATION</h5>
-
-                    <p id="inspiration">
+                    <p>
                               
                               Looking for a little inspiration or guidance to help you achieve your fitness goals? As a Yakuza member you can take advantage of  our FreeFitnessTraining or find your motivation by getting free access to realtime  comments and experiences from our customers @PeopleOfYakuza chat bot.<br>
                               <br>
@@ -19,7 +19,7 @@
                               </b></i> <abbr>C.E.O</abbr> 
                     </p>
 
-
+</div>
 </div>
 <div class="back">
           <a href="yakuzahomepage.html" style="color:black;" >back</a>
