--- a/registeryakuza.html
+++ b/registeryakuza.html
@@ -3,13 +3,13 @@
 <title>Yakuza Rgister</title>
 <link rel="stylesheet" href="yakuzaPowergym.css">
 
-
+ 
 </head>
 <body style="background-color: rgb(1, 71,45);">
           <div id="rbpage">
 <form> 
 <fieldset>
-<div class="registerpage">
+<div class="registerpage"   >
 <legend id="legend">NON-MEMBER</legend>
  <div class="font"> ID:<br> <input type="text" name="ID" class="wspace"><br>
           <div class="font">FIRST NAME: <br><input type="text" name="firstname" class="wspace"><br></div>
@@ -21,8 +21,8 @@
 <div class="font">FEMALE: <br> <input style="cursor: pointer;" type="radio" name="gender" class="wspace"><br></div>
 <div class="font">EMAIL-ADRESS: <br> <input type="email" name="email-adress" class="wspace"> <br></div>
 <div class="font">USER-NAME: <br><input type="text " name="user-name" class="wspace"><br></div>
-<div class="font"> LOG-IN(password): <br> <input type="password" name="log-in(password)" class="wspace"><br></div>
-<div class="font"> confirm-password:<br> <input type="password" name="confirm-password" class="wspace"></div>
+<div class="font"> LOG-IN(password): <br> <input type="password" name="log-in(password)" class="wspace" minlength="5" maxlength="10"><br></div>
+<div class="font"> confirm-password:<br> <input type="password" name="confirm-password" class="wspace"minlength="5" maxlength="10"></div>
 
 
 <input type="reset" value="RESET" id="reset">  
@@ -35,7 +35,9 @@
 </div>
 </div>
 </fieldset>
-</form>
+</form
+
+
           </div>
 
 
