--- a/yakuzaAbout.html
+++ b/yakuzaAbout.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
-          <link rel="stylesheet" href="yakuzaPowergym.css">
+          
+          <link rel="stylesheet" href="yakuzaAbout.css">
+          <link rel="stylesheet" href="css/bootstrap.min.css">
+          <script src="js/bootstrap.bundle.js"></script>
           <title>
                     ABOUT
           </title>
@@ -9,7 +12,7 @@
           <div class="wrapperA">
          <div class="about">
 
-          <h1>ABOUT</h2>          
+          <h1>ABOUT</h1>          
 
                     <p>
                               Yakuza offers a squeaky clean-gym experience at an exceptional affordable rates.No matter what you are looking for in a gym, at yakuza we've  completely got you covered by our various membership offers that are exclusively and uniquely tailored for you based on your genetical body type and  body goals.All Yakuza memebers enjoy unlimited acces to their home clubs and support from our friendly and knowledgeable staff  anytime you need them.There are also additional benefits such as the ability to bring a guest into any of our gym branches countrywide at no additional costs.
@@ -19,8 +22,8 @@
          </div> 
 </div>
 
-<div class="back">
-          <a href="yakuzahomepage.html" style="color:black;" >back</a>
+<div class="backhome">
+          <button id="button" class="btn btn-dark btn-outline-secondary btn-sm border-light text-light  rounded-pill "><a class="text-decoration-none text-light" href="yakuzahomepage.html">Back Home</a></button>
 
 </div>
 
