--- a/yakuzagoal.html
+++ b/yakuzagoal.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <head>
           <title>GOALS</title>
-          <link rel="stylesheet" href="yakuzaPowergym.css">
+          <link rel="stylesheet" href="yakuzagoal.css">
+          <link rel="stylesheet" href="css/bootstrap.min.css">
+          <script src="js/bootstrap.bundle.js"></script>
 </head>
 <body class="body">
           <div class="wrapperG">
@@ -20,8 +22,9 @@
           </div>
 
 
-<div class="back">
-          <a href="yakuzahomepage.html" style="color:black;" >back</a>
+<div class="backhome">
+          <button id="button" class="btn btn-dark btn-outline-secondary btn-sm border-light text-light  rounded-pill "><a class="text-decoration-none text-light" href="yakuzahomepage.html">Back Home</a></button>
+
 
 </div>
 
