UI designing and visual effects

--- a/loginform.html
+++ b/loginform.html
@@ -35,7 +35,7 @@
  
 
 
- <button onclick="login()" class="btn  btn-sm btn-outline-secondary rounded-pill mt-3 text-decoration-none">SUBMIT</button> <br>
+ <button class="btn  btn-sm btn-outline-secondary rounded-pill mt-3 text-decoration-none"><a href="yakuzahomepage.html">SUBMIT</a></button> <br>
      
 
 
