--- a/yakuzagoal.html
+++ b/yakuzagoal.html
@@ -23,7 +23,7 @@
 
 
 <div class="backhome">
-          <button id="button" class="btn btn-dark btn-outline-secondary btn-sm border-light text-light  rounded-pill "><a class="text-decoration-none text-light" href="yakuzahomepage.html">Back Home</a></button>
+          <button id="button" class="btn btn-dark btn-outline-secondary btn-sm border-light text-light text-center   rounded-pill "><a class="text-decoration-none text-light" href="yakuzahomepage.html">Back Home</a></button>
 
 
 </div>
